check_PROGRAMS = tests/azqmpi/allgather_1    \
                 tests/azqmpi/allgatherv_1    \
                 tests/azqmpi/allreduce_1    \
                 tests/azqmpi/allreduce_2    \
                 tests/azqmpi/alltoall_1    \
                 tests/azqmpi/alltoall_2    \
                 tests/azqmpi/alltoallv_1    \
                 tests/azqmpi/attrs_1    \
                 tests/azqmpi/attrs_2    \
                 tests/azqmpi/barrier_1    \
                 tests/azqmpi/barrier_2    \
                 tests/azqmpi/basic    \
                 tests/azqmpi/bcast_1    \
                 tests/azqmpi/bcast_2    \
                 tests/azqmpi/buff_1    \
                 tests/azqmpi/buff_2    \
                 tests/azqmpi/buff_3    \
                 tests/azqmpi/buff_4    \
                 tests/azqmpi/cancel_1    \
                 tests/azqmpi/cancel_2    \
                 tests/azqmpi/cancel_3    \
                 tests/azqmpi/cancel_4    \
                 tests/azqmpi/cancel_5    \
                 tests/azqmpi/collop_1    \
                 tests/azqmpi/collop_2    \
                 tests/azqmpi/collop_3    \
                 tests/azqmpi/collop_4    \
                 tests/azqmpi/collop_5    \
                 tests/azqmpi/collop_6    \
                 tests/azqmpi/collop_7    \
                 tests/azqmpi/comm_1    \
                 tests/azqmpi/comm_2    \
                 tests/azqmpi/comm_3    \
                 tests/azqmpi/comm_4    \
                 tests/azqmpi/comm_5    \
                 tests/azqmpi/comm_6    \
                 tests/azqmpi/comm_7    \
                 tests/azqmpi/comm_8    \
                 tests/azqmpi/comm_9    \
                 tests/azqmpi/dtype_10    \
                 tests/azqmpi/dtype_10_sendrecv2    \
                 tests/azqmpi/dtype_10_struct    \
                 tests/azqmpi/dtype_10_vector    \
                 tests/azqmpi/dtype_10_vector_non_contig    \
                 tests/azqmpi/dtype_1    \
                 tests/azqmpi/dtype_2    \
                 tests/azqmpi/dtype_3    \
                 tests/azqmpi/dtype_4    \
                 tests/azqmpi/dtype_5    \
                 tests/azqmpi/dtype_6    \
                 tests/azqmpi/dtype_7    \
                 tests/azqmpi/dtype_8    \
                 tests/azqmpi/dtype_9    \
                 tests/azqmpi/errhnd_1    \
                 tests/azqmpi/errhnd_2    \
                 tests/azqmpi/errhnd_3    \
                 tests/azqmpi/gather_1    \
                 tests/azqmpi/gatherv_1    \
                 tests/azqmpi/group_1    \
                 tests/azqmpi/group_2    \
                 tests/azqmpi/group_3    \
                 tests/azqmpi/group_4    \
                 tests/azqmpi/group_5    \
                 tests/azqmpi/intercomm_1    \
                 tests/azqmpi/intercomm_2    \
                 tests/azqmpi/intercomm_3    \
                 tests/azqmpi/intercomm_4    \
                 tests/azqmpi/null_1    \
                 tests/azqmpi/pack_1    \
                 tests/azqmpi/probe_1    \
                 tests/azqmpi/probe_2    \
                 tests/azqmpi/profile_1    \
                 tests/azqmpi/pt2pt_1    \
                 tests/azqmpi/pt2pt_2    \
                 tests/azqmpi/pt2pt_3    \
                 tests/azqmpi/pt2pt_4    \
                 tests/azqmpi/pt2pt_5    \
                 tests/azqmpi/ptent_1    \
                 tests/azqmpi/ptent_2    \
                 tests/azqmpi/ptent_3    \
                 tests/azqmpi/ptent_4    \
                 tests/azqmpi/ptent_5    \
                 tests/azqmpi/ptent_6    \
                 tests/azqmpi/ptent_7    \
                 tests/azqmpi/ptent_10    \
                 tests/azqmpi/redscat_1    \
                 tests/azqmpi/req_free_1    \
                 tests/azqmpi/scan_1    \
                 tests/azqmpi/scan_2    \
                 tests/azqmpi/scatter_1    \
                 tests/azqmpi/scatterv_1    \
                 tests/azqmpi/self_1    \
                 tests/azqmpi/sendrecv_1    \
                 tests/azqmpi/sendrecv_2    \
                 tests/azqmpi/size_1    \
                 tests/azqmpi/struct_1    \
                 tests/azqmpi/struct_2    \
                 tests/azqmpi/struct_3    \
                 tests/azqmpi/struct_4    \
                 tests/azqmpi/struct_5    \
                 tests/azqmpi/test_1    \
                 tests/azqmpi/testall_1    \
                 tests/azqmpi/testany_1    \
                 tests/azqmpi/testsome_1    \
                 tests/azqmpi/time    \
                 tests/azqmpi/topol_1    \
                 tests/azqmpi/topol_2    \
                 tests/azqmpi/topol_3    \
                 tests/azqmpi/topol_4    \
                 tests/azqmpi/topol_5    \
                 tests/azqmpi/topol_6    \
                 tests/azqmpi/wait_1    \
                 tests/azqmpi/wait_2    \
                 tests/azqmpi/waitall_1    \
                 tests/azqmpi/waitany_1    \
                 tests/azqmpi/waitsome_1  \
                 tests/azqmpi/issend_0

tests_azqmpi_allgather_1_SOURCES = tests/azqmpi/allgather_1.c
tests_azqmpi_allgather_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_allgather_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_allgatherv_1_SOURCES = tests/azqmpi/allgatherv_1.c
tests_azqmpi_allgatherv_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_allgatherv_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_allreduce_1_SOURCES = tests/azqmpi/allreduce_1.c
tests_azqmpi_allreduce_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_allreduce_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_allreduce_2_SOURCES = tests/azqmpi/allreduce_2.c
tests_azqmpi_allreduce_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_allreduce_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_alltoall_1_SOURCES = tests/azqmpi/alltoall_1.c
tests_azqmpi_alltoall_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_alltoall_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_alltoall_2_SOURCES = tests/azqmpi/alltoall_2.c
tests_azqmpi_alltoall_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_alltoall_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_alltoallv_1_SOURCES = tests/azqmpi/alltoallv_1.c
tests_azqmpi_alltoallv_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_alltoallv_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_attrs_1_SOURCES = tests/azqmpi/attrs_1.c
tests_azqmpi_attrs_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_attrs_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_attrs_2_SOURCES = tests/azqmpi/attrs_2.c
tests_azqmpi_attrs_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_attrs_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_barrier_1_SOURCES = tests/azqmpi/barrier_1.c
tests_azqmpi_barrier_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_barrier_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_barrier_2_SOURCES = tests/azqmpi/barrier_2.c
tests_azqmpi_barrier_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_barrier_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_basic_SOURCES = tests/azqmpi/basic.c
tests_azqmpi_basic_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_basic_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_bcast_1_SOURCES = tests/azqmpi/bcast_1.c
tests_azqmpi_bcast_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_bcast_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_bcast_2_SOURCES = tests/azqmpi/bcast_2.c
tests_azqmpi_bcast_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_bcast_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_buff_1_SOURCES = tests/azqmpi/buff_1.c
tests_azqmpi_buff_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_buff_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_buff_2_SOURCES = tests/azqmpi/buff_2.c
tests_azqmpi_buff_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_buff_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_buff_3_SOURCES = tests/azqmpi/buff_3.c
tests_azqmpi_buff_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_buff_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_buff_4_SOURCES = tests/azqmpi/buff_4.c
tests_azqmpi_buff_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_buff_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_cancel_1_SOURCES = tests/azqmpi/cancel_1.c
tests_azqmpi_cancel_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_cancel_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_cancel_2_SOURCES = tests/azqmpi/cancel_2.c
tests_azqmpi_cancel_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_cancel_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_cancel_3_SOURCES = tests/azqmpi/cancel_3.c
tests_azqmpi_cancel_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_cancel_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_cancel_4_SOURCES = tests/azqmpi/cancel_4.c
tests_azqmpi_cancel_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_cancel_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_cancel_5_SOURCES = tests/azqmpi/cancel_5.c
tests_azqmpi_cancel_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_cancel_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_collop_1_SOURCES = tests/azqmpi/collop_1.c
tests_azqmpi_collop_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_collop_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_collop_2_SOURCES = tests/azqmpi/collop_2.c
tests_azqmpi_collop_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_collop_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_collop_3_SOURCES = tests/azqmpi/collop_3.c
tests_azqmpi_collop_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_collop_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_collop_4_SOURCES = tests/azqmpi/collop_4.c
tests_azqmpi_collop_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_collop_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_collop_5_SOURCES = tests/azqmpi/collop_5.c
tests_azqmpi_collop_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_collop_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_collop_6_SOURCES = tests/azqmpi/collop_6.c
tests_azqmpi_collop_6_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_collop_6_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_collop_7_SOURCES = tests/azqmpi/collop_7.c
tests_azqmpi_collop_7_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_collop_7_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_1_SOURCES = tests/azqmpi/comm_1.c
tests_azqmpi_comm_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_2_SOURCES = tests/azqmpi/comm_2.c
tests_azqmpi_comm_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_3_SOURCES = tests/azqmpi/comm_3.c
tests_azqmpi_comm_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_4_SOURCES = tests/azqmpi/comm_4.c
tests_azqmpi_comm_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_5_SOURCES = tests/azqmpi/comm_5.c
tests_azqmpi_comm_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_6_SOURCES = tests/azqmpi/comm_6.c
tests_azqmpi_comm_6_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_6_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_7_SOURCES = tests/azqmpi/comm_7.c
tests_azqmpi_comm_7_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_7_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_8_SOURCES = tests/azqmpi/comm_8.c
tests_azqmpi_comm_8_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_8_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_comm_9_SOURCES = tests/azqmpi/comm_9.c
tests_azqmpi_comm_9_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_comm_9_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_10_SOURCES = tests/azqmpi/dtype_10.c
tests_azqmpi_dtype_10_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_10_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_10_sendrecv2_SOURCES = tests/azqmpi/dtype_10_sendrecv2.c
tests_azqmpi_dtype_10_sendrecv2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_10_sendrecv2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_10_struct_SOURCES = tests/azqmpi/dtype_10_struct.c
tests_azqmpi_dtype_10_struct_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_10_struct_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_10_vector_SOURCES = tests/azqmpi/dtype_10_vector.c
tests_azqmpi_dtype_10_vector_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_10_vector_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_10_vector_non_contig_SOURCES = tests/azqmpi/dtype_10_vector_non_contig.c
tests_azqmpi_dtype_10_vector_non_contig_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_10_vector_non_contig_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_1_SOURCES = tests/azqmpi/dtype_1.c
tests_azqmpi_dtype_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_2_SOURCES = tests/azqmpi/dtype_2.c
tests_azqmpi_dtype_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_3_SOURCES = tests/azqmpi/dtype_3.c
tests_azqmpi_dtype_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_4_SOURCES = tests/azqmpi/dtype_4.c
tests_azqmpi_dtype_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_5_SOURCES = tests/azqmpi/dtype_5.c
tests_azqmpi_dtype_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_6_SOURCES = tests/azqmpi/dtype_6.c
tests_azqmpi_dtype_6_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_6_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_7_SOURCES = tests/azqmpi/dtype_7.c
tests_azqmpi_dtype_7_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_7_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_8_SOURCES = tests/azqmpi/dtype_8.c
tests_azqmpi_dtype_8_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_8_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_dtype_9_SOURCES = tests/azqmpi/dtype_9.c
tests_azqmpi_dtype_9_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_dtype_9_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_errhnd_1_SOURCES = tests/azqmpi/errhnd_1.c
tests_azqmpi_errhnd_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_errhnd_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_errhnd_2_SOURCES = tests/azqmpi/errhnd_2.c
tests_azqmpi_errhnd_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_errhnd_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_errhnd_3_SOURCES = tests/azqmpi/errhnd_3.c
tests_azqmpi_errhnd_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_errhnd_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_gather_1_SOURCES = tests/azqmpi/gather_1.c
tests_azqmpi_gather_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_gather_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_gatherv_1_SOURCES = tests/azqmpi/gatherv_1.c
tests_azqmpi_gatherv_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_gatherv_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_group_1_SOURCES = tests/azqmpi/group_1.c
tests_azqmpi_group_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_group_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_group_2_SOURCES = tests/azqmpi/group_2.c
tests_azqmpi_group_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_group_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_group_3_SOURCES = tests/azqmpi/group_3.c
tests_azqmpi_group_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_group_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_group_4_SOURCES = tests/azqmpi/group_4.c
tests_azqmpi_group_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_group_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_group_5_SOURCES = tests/azqmpi/group_5.c
tests_azqmpi_group_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_group_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_intercomm_1_SOURCES = tests/azqmpi/intercomm_1.c
tests_azqmpi_intercomm_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_intercomm_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_intercomm_2_SOURCES = tests/azqmpi/intercomm_2.c
tests_azqmpi_intercomm_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_intercomm_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_intercomm_3_SOURCES = tests/azqmpi/intercomm_3.c
tests_azqmpi_intercomm_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_intercomm_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_intercomm_4_SOURCES = tests/azqmpi/intercomm_4.c
tests_azqmpi_intercomm_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_intercomm_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_null_1_SOURCES = tests/azqmpi/null_1.c
tests_azqmpi_null_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_null_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_pack_1_SOURCES = tests/azqmpi/pack_1.c
tests_azqmpi_pack_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_pack_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_probe_1_SOURCES = tests/azqmpi/probe_1.c
tests_azqmpi_probe_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_probe_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_probe_2_SOURCES = tests/azqmpi/probe_2.c
tests_azqmpi_probe_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_probe_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_profile_1_SOURCES = tests/azqmpi/profile_1.c
tests_azqmpi_profile_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_profile_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_pt2pt_1_SOURCES = tests/azqmpi/pt2pt_1.c
tests_azqmpi_pt2pt_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_pt2pt_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_pt2pt_2_SOURCES = tests/azqmpi/pt2pt_2.c
tests_azqmpi_pt2pt_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_pt2pt_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_pt2pt_3_SOURCES = tests/azqmpi/pt2pt_3.c
tests_azqmpi_pt2pt_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_pt2pt_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_pt2pt_4_SOURCES = tests/azqmpi/pt2pt_4.c
tests_azqmpi_pt2pt_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_pt2pt_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_pt2pt_5_SOURCES = tests/azqmpi/pt2pt_5.c
tests_azqmpi_pt2pt_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_pt2pt_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_ptent_1_SOURCES = tests/azqmpi/ptent_1.c
tests_azqmpi_ptent_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_ptent_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_ptent_2_SOURCES = tests/azqmpi/ptent_2.c
tests_azqmpi_ptent_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_ptent_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_ptent_3_SOURCES = tests/azqmpi/ptent_3.c
tests_azqmpi_ptent_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_ptent_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_ptent_4_SOURCES = tests/azqmpi/ptent_4.c
tests_azqmpi_ptent_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_ptent_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_ptent_5_SOURCES = tests/azqmpi/ptent_5.c
tests_azqmpi_ptent_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_ptent_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_ptent_6_SOURCES = tests/azqmpi/ptent_6.c
tests_azqmpi_ptent_6_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_ptent_6_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_ptent_7_SOURCES = tests/azqmpi/ptent_7.c
tests_azqmpi_ptent_7_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_ptent_7_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_ptent_10_SOURCES = tests/azqmpi/ptent_10.c
tests_azqmpi_ptent_10_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_ptent_10_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_redscat_1_SOURCES = tests/azqmpi/redscat_1.c
tests_azqmpi_redscat_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_redscat_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_req_free_1_SOURCES = tests/azqmpi/req_free_1.c
tests_azqmpi_req_free_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_req_free_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_scan_1_SOURCES = tests/azqmpi/scan_1.c
tests_azqmpi_scan_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_scan_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_scan_2_SOURCES = tests/azqmpi/scan_2.c
tests_azqmpi_scan_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_scan_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_scatter_1_SOURCES = tests/azqmpi/scatter_1.c
tests_azqmpi_scatter_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_scatter_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_scatterv_1_SOURCES = tests/azqmpi/scatterv_1.c
tests_azqmpi_scatterv_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_scatterv_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_self_1_SOURCES = tests/azqmpi/self_1.c
tests_azqmpi_self_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_self_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_sendrecv_1_SOURCES = tests/azqmpi/sendrecv_1.c
tests_azqmpi_sendrecv_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_sendrecv_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_sendrecv_2_SOURCES = tests/azqmpi/sendrecv_2.c
tests_azqmpi_sendrecv_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_sendrecv_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_size_1_SOURCES = tests/azqmpi/size_1.c
tests_azqmpi_size_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_size_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_struct_1_SOURCES = tests/azqmpi/struct_1.c
tests_azqmpi_struct_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_struct_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_struct_2_SOURCES = tests/azqmpi/struct_2.c
tests_azqmpi_struct_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_struct_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_struct_3_SOURCES = tests/azqmpi/struct_3.c
tests_azqmpi_struct_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_struct_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_struct_4_SOURCES = tests/azqmpi/struct_4.c
tests_azqmpi_struct_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_struct_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_struct_5_SOURCES = tests/azqmpi/struct_5.c
tests_azqmpi_struct_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_struct_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_test_1_SOURCES = tests/azqmpi/test_1.c
tests_azqmpi_test_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_test_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_testall_1_SOURCES = tests/azqmpi/testall_1.c
tests_azqmpi_testall_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_testall_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_testany_1_SOURCES = tests/azqmpi/testany_1.c
tests_azqmpi_testany_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_testany_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_testsome_1_SOURCES = tests/azqmpi/testsome_1.c
tests_azqmpi_testsome_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_testsome_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_time_SOURCES = tests/azqmpi/time.c
tests_azqmpi_time_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_time_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_topol_1_SOURCES = tests/azqmpi/topol_1.c
tests_azqmpi_topol_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_topol_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_topol_2_SOURCES = tests/azqmpi/topol_2.c
tests_azqmpi_topol_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_topol_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_topol_3_SOURCES = tests/azqmpi/topol_3.c
tests_azqmpi_topol_3_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_topol_3_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_topol_4_SOURCES = tests/azqmpi/topol_4.c
tests_azqmpi_topol_4_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_topol_4_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_topol_5_SOURCES = tests/azqmpi/topol_5.c
tests_azqmpi_topol_5_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_topol_5_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_topol_6_SOURCES = tests/azqmpi/topol_6.c
tests_azqmpi_topol_6_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_topol_6_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_wait_1_SOURCES = tests/azqmpi/wait_1.c
tests_azqmpi_wait_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_wait_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_wait_2_SOURCES = tests/azqmpi/wait_2.c
tests_azqmpi_wait_2_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_wait_2_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_waitall_1_SOURCES = tests/azqmpi/waitall_1.c
tests_azqmpi_waitall_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_waitall_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_waitany_1_SOURCES = tests/azqmpi/waitany_1.c
tests_azqmpi_waitany_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_waitany_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_waitsome_1_SOURCES = tests/azqmpi/waitsome_1.c
tests_azqmpi_waitsome_1_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_waitsome_1_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a

tests_azqmpi_issend_0_SOURCES = tests/azqmpi/issend_0.c
tests_azqmpi_issend_0_LDADD = -L$(abs_builddir)/lib -lazqmpi
tests_azqmpi_issend_0_DEPENDENCIES = $(abs_builddir)/lib/libazqmpi.a
