lib_libazqmpi_a_SOURCES += azqmpi/src/attr/mpi_attr_delete.c      \
                           azqmpi/src/attr/mpi_attr_get.c         \
                           azqmpi/src/attr/mpi_attr_put.c         \
                           azqmpi/src/attr/mpi_keyval_create.c    \
                           azqmpi/src/attr/mpi_keyval_free.c
