lib_libazqmpi_a_SOURCES += azqmpi/src/coll/mpi_alltoall.c           \
                           azqmpi/src/coll/mpi_alltoallv.c          \
                           azqmpi/src/coll/mpi_barrier.c            \
                           azqmpi/src/coll/mpi_bcast.c              \
                           azqmpi/src/coll/mpi_gather_all.c         \
                           azqmpi/src/coll/mpi_gather_allv.c        \
                           azqmpi/src/coll/mpi_gather.c             \
                           azqmpi/src/coll/mpi_gather_v.c           \
                           azqmpi/src/coll/mpi_op_create.c          \
                           azqmpi/src/coll/mpi_op_free.c            \
                           azqmpi/src/coll/mpi_reduce_all.c         \
                           azqmpi/src/coll/mpi_reduce.c             \
                           azqmpi/src/coll/mpi_reduce_scatter.c     \
                           azqmpi/src/coll/mpi_scan.c               \
                           azqmpi/src/coll/mpi_scatter.c            \
                           azqmpi/src/coll/mpi_scatter_v.c
