lib_libazqmpi_a_SOURCES += azqmpi/src/comn/mpi_common_comn.c                \
                           azqmpi/src/comn/mpi_comn_compare.c               \
                           azqmpi/src/comn/mpi_comn_create.c                \
                           azqmpi/src/comn/mpi_comn_dup.c                   \
                           azqmpi/src/comn/mpi_comn_free.c                  \
                           azqmpi/src/comn/mpi_comn_group.c                 \
                           azqmpi/src/comn/mpi_comn_rank.c                  \
                           azqmpi/src/comn/mpi_comn_size.c                  \
                           azqmpi/src/comn/mpi_comn_split.c                 \
                           azqmpi/src/comn/mpi_intercomn_create.c           \
                           azqmpi/src/comn/mpi_intercomn_merge.c            \
                           azqmpi/src/comn/mpi_intercomn_remote_group.c     \
                           azqmpi/src/comn/mpi_intercomn_remote_size.c      \
                           azqmpi/src/comn/mpi_intercomn_test.c
