lib_libazqmpi_a_SOURCES += azqmpi/src/dtype/mpi_dtype_commit.c      \
                           azqmpi/src/dtype/mpi_dtype_extent.c      \
                           azqmpi/src/dtype/mpi_dtype_lb.c          \
                           azqmpi/src/dtype/mpi_dtype_ub.c          \
                           azqmpi/src/dtype/mpi_dtype_size.c        \
                           azqmpi/src/dtype/mpi_get_count.c         \
                           azqmpi/src/dtype/mpi_get_elements.c      \
                           azqmpi/src/dtype/mpi_dtype_address.c     \
                           azqmpi/src/dtype/mpi_dtype_struct.c      \
                           azqmpi/src/dtype/mpi_dtype_indexed.c     \
                           azqmpi/src/dtype/mpi_dtype_hindexed.c    \
                           azqmpi/src/dtype/mpi_dtype_contiguous.c  \
                           azqmpi/src/dtype/mpi_dtype_vector.c      \
                           azqmpi/src/dtype/mpi_dtype_hvector.c     \
                           azqmpi/src/dtype/mpi_dtype_free.c        \
                           azqmpi/src/dtype/mpi_pack.c              \
                           azqmpi/src/dtype/mpi_pack_size.c         \
                           azqmpi/src/dtype/mpi_unpack.c
