lib_libazqmpi_a_SOURCES += azqmpi/src/errhnd/mpi_errhnd_create.c  \
                           azqmpi/src/errhnd/mpi_errhnd_free.c    \
                           azqmpi/src/errhnd/mpi_errhnd_get.c     \
                           azqmpi/src/errhnd/mpi_errhnd_set.c     \
                           azqmpi/src/errhnd/mpi_error_class.c    \
                           azqmpi/src/errhnd/mpi_error_string.c   \
                           azqmpi/src/errhnd/mpi_fn_copy.c        \
                           azqmpi/src/errhnd/mpi_fn_delete.c      \
                           azqmpi/src/errhnd/mpi_fn_dup.c
