lib_libazqmpi_a_SOURCES += azqmpi/src/group/mpi_group_compare.c           \
                           azqmpi/src/group/mpi_group_difference.c        \
                           azqmpi/src/group/mpi_group_excl.c              \
                           azqmpi/src/group/mpi_group_free.c              \
                           azqmpi/src/group/mpi_group_incl.c              \
                           azqmpi/src/group/mpi_group_intersection.c      \
                           azqmpi/src/group/mpi_group_range_excl.c        \
                           azqmpi/src/group/mpi_group_range_incl.c        \
                           azqmpi/src/group/mpi_group_rank.c              \
                           azqmpi/src/group/mpi_group_size.c              \
                           azqmpi/src/group/mpi_group_translate_ranks.c   \
                           azqmpi/src/group/mpi_group_union.c
