lib_libazqmpi_a_SOURCES += azqmpi/src/misc/mpi_common_init.c      \
                           azqmpi/src/misc/mpi_abort.c            \
                           azqmpi/src/misc/mpi_finalize.c         \
                           azqmpi/src/misc/mpi_init.c             \
                           azqmpi/src/misc/mpi_init_thread.c      \
                           azqmpi/src/misc/mpi_is_init.c          \
                           azqmpi/src/misc/mpi_query_thread.c     \
                           azqmpi/src/misc/mpi_is_thread_main.c   \
                           azqmpi/src/misc/mpi_pcontrol.c         \
                           azqmpi/src/misc/mpi_proc_name.c        \
                           azqmpi/src/misc/mpi_wtick.c            \
                           azqmpi/src/misc/mpi_wtime.c            \
                           azqmpi/src/misc/mpi_get_version.c
