lib_libazqmpi_a_SOURCES += azqmpi/src/private/p_collops.c       \
                           azqmpi/src/private/p_comn.c          \
                           azqmpi/src/private/p_dtype.c         \
                           azqmpi/src/private/p_errhnd.c        \
                           azqmpi/src/private/p_group.c         \
                           azqmpi/src/private/p_key.c           \
                           azqmpi/src/private/p_rqst.c          \
                           azqmpi/src/private/p_status.c        \
                           azqmpi/src/private/check.c           \
                           azqmpi/src/private/env.c             \
                           azqmpi/src/private/p_coll_sum.c      \
                           azqmpi/src/private/p_coll_max.c      \
                           azqmpi/src/private/p_coll_min.c      \
                           azqmpi/src/private/p_coll_prod.c     \
                           azqmpi/src/private/p_coll_land.c     \
                           azqmpi/src/private/p_coll_lor.c      \
                           azqmpi/src/private/p_coll_band.c     \
                           azqmpi/src/private/p_coll_bor.c      \
                           azqmpi/src/private/p_coll_lxor.c     \
                           azqmpi/src/private/p_coll_bxor.c     \
                           azqmpi/src/private/p_coll_maxloc.c   \
                           azqmpi/src/private/p_coll_minloc.c   \
                           azqmpi/src/private/main.c            \
                           azqmpi/src/private/lfs.c
