lib_libazqmpi_a_SOURCES += azqmpi/src/pt2pt/mpi_b_attach.c      \
                           azqmpi/src/pt2pt/mpi_b_detach.c      \
                           azqmpi/src/pt2pt/mpi_cancel.c        \
                           azqmpi/src/pt2pt/mpi_probe.c         \
                           azqmpi/src/pt2pt/mpi_probe_i.c       \
                           azqmpi/src/pt2pt/mpi_recv.c          \
                           azqmpi/src/pt2pt/mpi_recv_i.c        \
                           azqmpi/src/pt2pt/mpi_recv_p.c        \
                           azqmpi/src/pt2pt/mpi_rqst_free.c     \
                           azqmpi/src/pt2pt/mpi_send_b.c        \
                           azqmpi/src/pt2pt/mpi_send_bi.c       \
                           azqmpi/src/pt2pt/mpi_send_bp.c       \
                           azqmpi/src/pt2pt/mpi_send.c          \
                           azqmpi/src/pt2pt/mpi_send_i.c        \
                           azqmpi/src/pt2pt/mpi_send_p.c        \
                           azqmpi/src/pt2pt/mpi_send_r.c        \
                           azqmpi/src/pt2pt/mpi_sendrecv.c      \
                           azqmpi/src/pt2pt/mpi_sendrecv_rpl.c  \
                           azqmpi/src/pt2pt/mpi_send_ri.c       \
                           azqmpi/src/pt2pt/mpi_send_rp.c       \
                           azqmpi/src/pt2pt/mpi_send_s.c        \
                           azqmpi/src/pt2pt/mpi_send_si.c       \
                           azqmpi/src/pt2pt/mpi_send_sp.c       \
                           azqmpi/src/pt2pt/mpi_startall.c      \
                           azqmpi/src/pt2pt/mpi_start.c         \
                           azqmpi/src/pt2pt/mpi_testall.c       \
                           azqmpi/src/pt2pt/mpi_testany.c       \
                           azqmpi/src/pt2pt/mpi_test.c          \
                           azqmpi/src/pt2pt/mpi_test_cancel.c   \
                           azqmpi/src/pt2pt/mpi_testsome.c      \
                           azqmpi/src/pt2pt/mpi_waitall.c       \
                           azqmpi/src/pt2pt/mpi_waitany.c       \
                           azqmpi/src/pt2pt/mpi_wait.c          \
                           azqmpi/src/pt2pt/mpi_waitsome.c
