lib_libazqmpi_a_SOURCES += azqmpi/src/topol/mpi_cart_coords.c             \
                           azqmpi/src/topol/mpi_cart_create.c             \
                           azqmpi/src/topol/mpi_cartdim_get.c             \
                           azqmpi/src/topol/mpi_cart_get.c                \
                           azqmpi/src/topol/mpi_cart_map.c                \
                           azqmpi/src/topol/mpi_cart_rank.c               \
                           azqmpi/src/topol/mpi_cart_shift.c              \
                           azqmpi/src/topol/mpi_cart_sub.c                \
                           azqmpi/src/topol/mpi_dims_create.c             \
                           azqmpi/src/topol/mpi_graph_create.c            \
                           azqmpi/src/topol/mpi_graphdims_get.c           \
                           azqmpi/src/topol/mpi_graph_get.c               \
                           azqmpi/src/topol/mpi_graph_map.c               \
                           azqmpi/src/topol/mpi_graph_neighbors.c         \
                           azqmpi/src/topol/mpi_graph_neighbors_count.c   \
                           azqmpi/src/topol/mpi_topo_test.c
