noinst_HEADERS          += idsp/blk/impl/addr_hddn.h   \
                           idsp/blk/impl/grp_msg.h     \
                           idsp/blk/impl/mbx.h         \
                           idsp/blk/impl/pmp.h         \
                           idsp/blk/impl/pmp_msg.h     \
                           idsp/blk/impl/rpc_hddn.h    \
                           idsp/blk/impl/grp_hddn.h    \
                           idsp/blk/impl/grp_sk.h      \
                           idsp/blk/impl/pmp_cfg.h     \
                           idsp/blk/impl/pmp_hddn.h    \
                           idsp/blk/impl/pmp_sk.h      \
                           idsp/blk/impl/rpq.h         \
                           idsp/blk/impl/xpn.h

lib_libazqmpi_a_SOURCES += idsp/blk/impl/azq.c         \
                           idsp/blk/impl/com.c         \
                           idsp/blk/impl/dlq.c         \
                           idsp/blk/impl/grp.c         \
                           idsp/blk/impl/grp_skeleton.c\
                           idsp/blk/impl/grp_stub.c    \
                           idsp/blk/impl/opr.c         \
                           idsp/blk/impl/pmp.c         \
                           idsp/blk/impl/pmp_skeleton.c\
                           idsp/blk/impl/pmp_stub.c    \
                           idsp/blk/impl/rpc.c         \
                           idsp/blk/impl/rpq.c         \
                           idsp/blk/impl/rqst.c        \
                           idsp/blk/impl/mbx.c         \
                           idsp/blk/impl/thr.c         \
                           idsp/blk/impl/util.c        \
                           idsp/blk/impl/s_sync.c      \
                           idsp/blk/impl/r_sync.c      \
                           idsp/blk/impl/s_async.c     \
                           idsp/blk/impl/r_async.c     \
                           idsp/blk/impl/prst.c        \
                           idsp/blk/impl/cancel.c      \
                           idsp/blk/impl/aprobe.c      \
                           idsp/blk/impl/probe.c       \
                           idsp/blk/impl/wait.c        \
                           idsp/blk/impl/waitall.c     \
                           idsp/blk/impl/waitany.c     \
                           idsp/blk/impl/waitsome.c    \
                           idsp/blk/impl/test.c        \
                           idsp/blk/impl/testany.c     \
                           idsp/blk/impl/testall.c     \
                           idsp/blk/impl/testsome.c    \
                           idsp/blk/impl/timer.c
