lib_libazqmpi_a_HEADERS += idsp/blk/spec/addr.h        \
                           idsp/blk/spec/atomic.h      \
                           idsp/blk/spec/azq.h         \
                           idsp/blk/spec/azq_types.h   \
                           idsp/blk/spec/com.h         \
                           idsp/blk/spec/dlq.h         \
                           idsp/blk/spec/grp.h         \
                           idsp/blk/spec/opr.h         \
                           idsp/blk/spec/rpc.h         \
                           idsp/blk/spec/rqst.h        \
                           idsp/blk/spec/thr_dptr.h    \
                           idsp/blk/spec/thr.h         \
                           idsp/blk/spec/timer.h       \
                           idsp/blk/spec/util.h
